<resources>
    <string name="app_name">Assignment 2</string>
    <string name="hello_message">Hello World!</string>
    <string name="buttonText">I\'m a Button</string>
    <string name="loginText">Login</string>
    <string name="passwordText">Password</string>
    <string name="loginHint">login name</string>
    <string name="switchText">What does this do?</string>
    <string name="loginButton">Log In</string>
    <string name="todo">TODO</string>
    <string name="radiobutton">RadioButton</string>
    <string name="checkbox">CheckBox</string>
    <string name="dialog_title">Finished?</string>
    <string name="toast_on">Switch is on</string>
    <string name="toast_off">Switch is off</string>
    <string name="chatButton">Start Chat</string>
    <string name="sendButton">Send</string>
    <string name="chatText">Enter Text</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="actionOne">action</string>
    <string name="actionTwo">action</string>
    <string name="actionThree">action</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="toolbarText">Test Toolbar</string>
</resources>