<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:layout_columnWeight="1"
    android:rowCount="2"
    android:columnCount="2"
    android:gravity="fill"
    tools:context=".ListItemsActivity">

    <RadioButton android:text="@string/radiobutton" />

    <CheckBox android:text="@string/checkbox" />

    <Switch
        android:minHeight="48dp"
        android:text="@string/switchText"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageButton android:src="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/todo">
    </ImageButton>
</GridLayout>