<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/loginText">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/loginHint"
        android:autofillHints="username"
        android:inputType="textEmailAddress">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordText">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints="password"
        android:inputType="textPassword">
    </EditText>
</LinearLayout>